src/test/ui/issues/issue-3044.rs
fn main() {
    let needlesArr: Vec<char> = vec!['a', 'f'];
    needlesArr.iter().fold(|x, y| {
    });
    //~^^ ERROR this function takes 2 arguments but 1 argument was supplied
}
